fix: allow type converter factories to have resource config properties injected into them so that the JavaBean resources can inject decoderParam values into them instead of type converters
move PreprocessTypeConverter to smooks-javabean-cartridge repo since it's just referenced by this cartridge

Refs: https://github.com/smooks/smooks-javabean-cartridge/issues/130